--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
     <head></head>
     <body>
         <h1>this is a header!</h1>
+        <p>this is a paragraph.</p>
+        
     </body>
 </html>
